force-app/main/default/objects/TCS_Shift__c/TCS_Shift__c.object-meta.xml
<CustomObject>
    <label>TCS Shift</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>TCS Shift</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCS Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>