force-app/main/default/objects/TCS_Shift__c/fields/Lifeline_NB_Role__c.field-meta.xml
<CustomField>
    <fullName>Lifeline_NB_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lifeline NB Role</label>
    <referenceTo>Lifeline_NB_Role__c</referenceTo>
    <relationshipLabel>TCS Shifts</relationshipLabel>
    <relationshipName>TCS_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>