force-app/main/default/objects/TCS_Shift__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift</label>
    <referenceTo>TCS_Shift_Type__c</referenceTo>
    <relationshipLabel>TCS Shift Type</relationshipLabel>
    <relationshipName>TCS_Shift</relationshipName>
    <type>Lookup</type>
</CustomField>