force-app/main/default/objects/TCS_Shift__c/fields/Supervisor_Shift__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Shift</label>
    <type>Checkbox</type>
</CustomField>