force-app/main/default/objects/TCS_Shift__c/fields/TCS__c.field-meta.xml
<CustomField>
    <fullName>TCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>TCS_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>