force-app/main/default/objects/TCS_Shift__c/fields/Weenkend_Shift__c.field-meta.xml
<CustomField>
    <fullName>Weenkend_Shift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weenkend Shift</label>
    <type>Checkbox</type>
</CustomField>